# ws-copilot

./: .gitignore  AGENTS.md  Agentic workflow steps.md  README.md  STYLE-GUIDE.md  server_err.txt
backend/: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_s3_connection.py  test_supabase_connection.py
backend/data/chat_history/: 324e286a-055b-42c3-8425-3355434d8e3e.json
backend/evaluation/notebooks/: ragas_experimentation.ipynb
backend/evaluation/scripts/: run_evaluation.py
backend/notebooks/: simple_agent.ipynb
backend/src/: server.py
backend/src/agents/simple_agent/: agent.py
backend/src/agents/supervisor_agent/: agent.py
backend/src/config/: index.py
backend/src/config/settings/: settings.py  settings_core.py  settings_ingestion.py  settings_runtime.py
backend/src/llm/: base.py  constants.py  pricing.py  provider_registry.py  resilience.py  response.py
backend/src/mcp/: __init__.py  __main__.py  rag_tools.py  server.py
backend/src/models/: index.py
backend/src/rag/ingestion/: index.py  utils.py
backend/src/rag/retrieval/: index.py  utils.py
backend/src/routes/: authRoutes.py  chatRoutes.py  configRoutes.py  modelRoutes.py  projectFilesRoutes.py  projectRoutes.py  ragRoutes.py  rbacRoutes.py
backend/src/services/: access.py  chat_streaming.py  jwtAuth.py  llm.py
backend/supabase/: config.toml  schema.sql
docs/: adr-template.md  decisions.md  error-log.md  implementation-summaries.md  knowledge-base.md  open-questions.md  post-mortem-template.md  project-status.md  rfc-template.md  risks.md
(+209 files in other folders)
