[tool.poetry]
name = "ws-copilot"
version = "0.1.0"
description = ""
authors = ["aismail1858"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = ">=0.121.2,<0.122.0"
uvicorn = ">=0.38.0,<0.39.0"
supabase = ">=2.24.0,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
pyjwt = "^2.13.0"
bcrypt = "^5.0.0"
boto3 = ">=1.40.74,<2.0.0"
celery = ">=5.5.3,<6.0.0"
langchain = ">=1.3.0,<2.0.0"
langchain-community = ">=0.4.1,<0.5.0"
langgraph = ">=1.2.0"
langchain-openai = ">=1.0.3,<2.0.0"
unstructured = {version = "0.18.11", extras = ["pdf", "docx", "pptx"]}
redis = "^7.0.1"
structlog = "^24.4.0"
mcp = ">=1.2.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"
ragas = "^0.4.0"
datasets = "^4.4.1"
pytest = "^9.0.2"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
